workloads/podinfo/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: podinfo
  annotations:
    fluxcd.io/ignore: "false"
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
