workloads/podinfo/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: podinfo
  namespace: podinfo
  labels:
    app: frontend
  annotations:
    fluxcd.io/ignore: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: localhost
              servicePort: 12345
---
apiVersion: v1
kind: Service
metadata:
  name: localhost
  namespace: podinfo
  annotations:
    fluxcd.io/ignore: "false"
spec:
  externalName: localhost
  type: ExternalName
